# abseil_status_macros

./: .gitignore  CMakeLists.txt  status.cc  status_builder.cc
absl_status_macros/: canonical_errors.h  source_location.h  status.h  status_builder.h  status_macros.h  status_matchers.h
tests/: CMakeLists.txt  status_macros_test.cc
